# ai-bootcamp-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
data_cache/: download-youtube-videos.ipynb
week-1/: 01-env-test.ipynb  02-hands-on-connecting-to-open-ai.ipynb  03-introduction-to-rag.ipynb  04-deep-dive-vector-search.ipynb  05-project-youtube-transcripts-rag.ipynb  06-project-document-assistant.ipynb  07-intelligent-chunking.ipynb  08-text-search-with-elasticsearch.ipynb  09-vector-search-with-qdrant.ipynb  README.md  docs_08.py  homework.ipynb  homework.py
week-2/: 01-agentic-rag.ipynb  02-adding-more-functions.ipynb  03-beyond-agentic-rag.ipynb  04-open-ai-agents-sdk.ipynb  05-multi-agent-system-with-agents-sdk.ipynb  06-introduction-to-pydantic-ai.ipynb  07-deep-research-agent-with-pydantic-ai.ipynb  08-multi-agent-deep-research-with-pydantic-ai.ipynb  09-multi-agent-orchestration-with-pydantic-ai.ipynb  10-introduction-to-mcp.ipynb  11-mcp-with-pydantic-ai.ipynb  docs.py  search_tools.py  youtube.py
week-2/data_cache/youtube_videos/: vK_SxyqIfwk.txt
week-2/mcp/: main.py
week-3/: 01-notebook-to-python-project.ipynb  02-writing-your-first-agent-test.ipynb  03-tracking-test-usage-cost.ipynb  04-testing-with-structured-output.ipynb  05-llm-judges-for-agent-testing.ipynb
